--- a/src/global.less
+++ b/src/global.less
@@ -11,6 +11,7 @@ body,
 
   .ant-pro-basicLayout-content {
     margin: 0 !important;
+    overflow-x: hidden;
   }
 }
 
